# eda-T2-Madariaga

poscodes/cpp/: CMakeLists.txt  bench.sh
poscodes/cpp/include/: poscode.hpp  utils.hpp
poscodes/cpp/src/: main.cpp  poscode.cpp  utils.cpp
